<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/mCardView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/button_background">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/profile_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/ic_home_photo" />

        <TextView
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/profile_name"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/profileImage"
            app:layout_constraintTop_toTopOf="parent"
            tools:textStyle="italic" />

        <TextView
            android:id="@+id/profileSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="4dp"
            android:text="@string/profile_surname"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/profileImage"
            app:layout_constraintTop_toBottomOf="@+id/profileName"
            tools:textStyle="italic" />

        <TextView
            android:id="@+id/profileEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="4dp"
            android:text="@string/profile_fragment_email"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/profileImage"
            app:layout_constraintTop_toBottomOf="@+id/profileSurname"
            app:layout_constraintVertical_bias="0.225" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="bottom"
        android:layout_marginTop="160dp"
        android:background="@android:color/holo_green_light"
    ></LinearLayout>
</androidx.cardview.widget.CardView>
