<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootRL"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/rower">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/menu_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_activity_title"
            android:textAlignment="center"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="30dp"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#7300D052"
            android:textSize="40sp"

            />

        <Button
            android:id="@+id/activityMenuSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/design_default_color_primary"
            android:text="@string/menu_activity_continue"
            android:textColor="@android:color/background_light"
            android:textSize="25sp"
            />

        <Button
            android:id="@+id/activityMenuSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/design_default_color_primary"
            android:text="@string/menu_activity_welcome"
            android:textColor="@android:color/background_light"
            android:textSize="25sp"
            app:navGraph="@navigation/reg_nav_graph"
            />
    </LinearLayout>
</RelativeLayout>