<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@android:color/holo_green_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="40sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@android:color/holo_green_light">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_login"
                        android:layout_width="match_parent"
                        android:layout_height="63dp"
                        android:background="@color/colorBackground_fragment"
                        android:hint="@string/sign_in_email_hint"
                        android:inputType="textNoSuggestions"
                        android:paddingStart="15dp"
                        android:textSize="22sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:paddingTop="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pass_login"
                        android:layout_width="match_parent"
                        android:layout_height="63dp"
                        android:background="@color/colorBackground_fragment"
                        android:ems="10"
                        android:hint="@string/sign_in_password"
                        android:inputType="textPassword"
                        android:paddingStart="15dp"
                        android:textSize="22sp"
                        android:visibility="visible"
                        tools:visibility="visible"
                        android:autofillHints="" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/signUpButtonRegistration"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:text="@string/signInButton"
                    android:textColor="@android:color/background_light"
                    android:textSize="22sp"
                    android:background="#556B2F"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/signUpButton"
            android:textColor="@android:color/background_light"
            android:textSize="22sp"
            android:background="#6B8E23"/>

    </LinearLayout>
</ScrollView>